--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -135,6 +135,15 @@
                                 <li class="dropdown-item-text" style="color: #dee2e6; font-weight: bold;">@username</li>
                                 <li><hr class="dropdown-divider" /></li>
                                 <li>
+                                    <a class="dropdown-item d-flex align-items-center gap-2" asp-controller="Home" asp-action="Profile">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                                            <path d="M11 10a2 2 0 1 0-4 0 2 2 0 0 0 4 0z"/>
+                                            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0 0 14A7 7 0 0 0 8 1zm0 12a5.978 5.978 0 0 1-4.468-2.09C3.07 10.07 5.03 9 8 9s4.93 1.07 4.468 1.91A5.978 5.978 0 0 1 8 13z"/>
+                                        </svg>
+                                        Profile
+                                    </a>
+                                </li>
+                                <li>
                                     <form asp-controller="Login" asp-action="Logout" method="post">
                                         <button type="submit" class="dropdown-item d-flex align-items-center gap-2">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
